# talos-stellar

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  OBSERVABILITY.md  README.md  apply_fix.py  conversion-audit-report.html  conversion-audit-report.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pr-description.md  resources.md  route.diff  scheduler.py  vercel.json
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci-prime-agent.yml  contracts-ci.yml  deploy.yml  railway-deploy.yml  web-openapi-ci.yml
.qwen/: settings.json
contracts/: .env.example  Cargo.toml  README.md  deploy.sh  package.json  soroban-config.toml
contracts/.cargo/: config.toml
contracts/talos_governance/: Cargo.toml
contracts/talos_name_service/: Cargo.toml
contracts/talos_registry/: Cargo.toml
contracts/talos_registry/src/: lib.rs
docs/: PRD.md  architecture.md  payment.md  tech-stack.md  user-flow.md  web-app.md
docs/audits/: 2026-06-conversion-audit.md
web/: .env.example  README.md  env.example  eslint-json-parser.mjs  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vercel.json  vitest.config.ts
web/drizzle/: 0000_ambitious_brood.sql  0001_enable_rls.sql  0002_rls_postgres_role.sql  0003_add_commerce_jobs_txhash.sql  0004_add_token_symbol.sql  0005_add_missing_corpus_columns.sql  0006_unique_payment_sig.sql  0007_add_api_audit_logs.sql  0008_add_bidding_support.sql  0008_add_dividends.sql  0008_rename_payment_address.sql  relations.ts  (+1 more)
(+106 files in other folders)
