[package]
name = "talos-registry"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }
